added club/player graphs

--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "@sapphire/type": "^2.1.1",
     "@sapphire/utilities": "^3.0.4",
     "@skyra/editable-commands": "^2.1.0",
+    "@types/chart.js": "^2.9.34",
     "@types/extract-domain": "^2.3.1",
     "@types/html-minifier": "^4.0.1",
     "@types/marked": "^3.0.2",
+    "canvas": "^2.8.0",
+    "chart.js": "^3.6.0",
+    "chartjs-node-canvas": "^4.1.4",
     "discord-markdown": "TKE-eSports/discord-markdown",
     "discord.js": "^13.3.1",
     "distube": "^3.0.1",
