--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "mysql-database": "^1.2.5",
     "nanoid": "^3.1.30",
     "pretty-ms": "^7.0.1",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "tag-replacer": "^1.2.4"
   },
   "devDependencies": {
     "@sapphire/prettier-config": "1.2.6",
